# docker_hardening

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  curriculum.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
examples/: __init__.py  eval_rl.py  train_ex.py  train_grpo.py  train_rl.py
graders/: __init__.py  analysis_grader.py  easy_grader.py  hard_grader.py  medium_grader.py
server/: __init__.py  app.py  docker_hardening_environment.py  requirements.txt
tasks/: __init__.py  generators.py
tests/: test_environment.py  test_graders.py  test_patch_provider_selection.py
tools/: __init__.py  docker_manager.py  patch_agent.py  reward_engine.py  scanner.py
